# frozen_map

./: Cargo.toml  Ideas.md
benches/: frozen_map.rs
src/: lib.rs
src/analysis/: hash_code_analyzer.rs  mod.rs  slice_key_analyzer.rs
src/frozen_map/: iterators.rs  map.rs  mod.rs  tests.rs
src/frozen_set/: iterators.rs  mod.rs  set.rs  tests.rs
src/maps/: empty_map.rs  hash_map.rs  integer_range_map.rs  mod.rs  scanning_map.rs  singleton_map.rs
