[package]
name = "frozen-collections"
version = "0.1.0"
edition = "2021"
description = "Fast read-only collections."
categories = ["data-structures"]
keywords = ["map", "set", "collection"]
repository = "https://github.com/geeknoid/frozen-collections"
license = "MIT"

[dependencies]
num-traits = "0.2.18"
bitvec = "1.0.1"
nameof = "1.2.2"
len-trait = "0.6.1"

[dev-dependencies]
rand = "0.9.0-alpha.1"
criterion = "0.5.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
single_call_fn = "allow"
min_ident_chars = "allow"
unused_self = "allow"
transmute_ptr_to_ptr = "allow"
needless_continue = "allow"
wildcard_imports = "allow"
too_many_lines = "allow"

[[bench]]
name = "frozen_map"
harness = false

[profile.bench]
codegen-units = 1
lto = "fat"
